--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,6 +2,14 @@
     min-height: 10vh;
     position: fixed;
     width: 100%;
+    border-bottom: 1px solid rgba(146, 144, 144, .1);
+}
+
+.nav__container1 {
+    min-height: 10vh;
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
 }
 
 .nav__wrapper {
