--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -3,6 +3,7 @@
     position: fixed;
     width: 100%;
     border-bottom: 1px solid rgba(146, 144, 144, .1);
+    z-index: 100;
 }
 
 .nav__container1 {
@@ -10,6 +11,7 @@
     position: fixed;
     width: 100%;
     background-color: #fff;
+    z-index: 100;
 }
 
 .nav__wrapper {
@@ -17,6 +19,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 100;
 }
 
 .nav__link ul {
@@ -26,4 +30,26 @@
 
 .nav__link ul li {
     width: 100px;
+}
+
+
+@media screen and (max-width: 991px) {
+    .nav__link {
+        position: absolute;
+        top: calc(100% + 0vh);
+        left: -100%;
+        background-color: rgb(138, 135, 135);
+        width: 100%;
+        z-index: 100;
+    }
+
+    .nav__link.active {
+        left: 0;
+    }
+
+    .nav__link ul {
+        display: flex;
+        list-style-type: none;
+        flex-direction: column;
+    }
 }
