--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("../../assets/1.jpg") no-repeat left;
+    url("../../assets/1.jpg") no-repeat center;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -13,10 +13,11 @@
     justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
+    margin: 0 2.2rem;
 }
 
 .hero__wrapper h3 {
-    font-size: 1.9rem;
+    font-size: 2rem;
     color: #fff;
     color: #c77d58;
 }
